--- a/index.html
+++ b/index.html
@@ -50,13 +50,9 @@
       }
 
     }
-
-    /* Custom styling */
-
-    body h1 {
-      padding: 30px;
-    }
   </style>
+
+  <link rel="stylesheet" href="custom_style.css">
 </head>
 
 <body>
