--- a/index.html
+++ b/index.html
@@ -62,4 +62,4 @@
   </div>
 </body>
 
-<script src="index.js" type="text/javascript"></script>
+<script src="./dist/index.js" type="text/javascript"></script>
